--- a/recordit/templates/base.html
+++ b/recordit/templates/base.html
@@ -90,7 +90,6 @@
 
             {% block footer %}
             <footer class="footer-area">
-                <!-- Footer-bottom Area -->
                 <div class="footer-bottom">
                     <div class="container">
                         <div class="row">
@@ -98,15 +97,16 @@
                                 <div class="copy-right pt--10 pb--10 text-center text-white">
                                     <p>
                                         &copy; 2019
-                                        <a href="http://www.bootstrapmb.com"><span>NCUST-AI</span></a> /
-                                        <span>Zero</span>
+                                        <a href="/" title="{{ _('North China University of Science and Technology University AI Profession') }}">
+                                            <span>NCUST-AI</span></a> /
+                                        <a href="https://github.com/Zeroto521" title="Written by Zeroto521">
+                                            <span>Zero</span></a>
                                     </p>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <!--// Footer-botton Area -->
             </footer>
             {% endblock footer %}
         </div>
