--- a/recordit/templates/auth/login.html
+++ b/recordit/templates/auth/login.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 
 
+{% block title %}Login{% endblock %}
+
 {% block breadcrumb %}
 <div class="breadcrumb-area" data-bgimage="{{ url_for('static', filename='images/bg/breadcrumb-bg-01.jpg') }}"
     data-black-overlay="4">
