--- a/recordit/templates/base.html
+++ b/recordit/templates/base.html
@@ -30,19 +30,20 @@
         <link rel="manifest" href="{{ url_for('static', filename='favicon/site.webmanifest') }}">
 
         {% block styles %}
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}" />
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/material-design-iconic-font.min.css') }}" />
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+        <link rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
         <link rel="stylesheet" href="{{ url_for('static', filename='css/plugins.css') }}" />
         <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
         {% endblock styles %}
 
         {% block headscript %}
-        <script src="{{ url_for('static', filename='js/vendor/modernizr-3.6.0.min.js') }}"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
         {% endblock headscript %}
     </head>
 
     <body>
-        <div class="main-wrapper">
+        <nav class="main-wrapper">
             {% block header %}
             <header class="header-area">
                 <div class="header-bottom-area header-sticky header-sticky">
@@ -86,7 +87,9 @@
                 </div>
             </header>
             {% endblock header %}
+        </nav>
 
+        <main class="main-wrapper">
             {% block breadcrumb %}
             {% endblock breadcrumb %}
 
@@ -101,7 +104,8 @@
                             <div class="col-lg-12">
                                 <div class="copy-right pt--10 pb--10 text-center text-white">
                                     <p>&copy; 2019
-                                        {{ link_field("NCUST-AI", "/", _('North China University of Science and Technology University AI Profession'), True) }} /
+                                        {{ link_field("NCUST-AI", "/", _('North China University of Science and Technology University AI Profession'), True) }}
+                                        /
                                         {{ link_field("Zero", "https://github.com/Zeroto521", "Written by Zeroto521", True) }}
                                     </p>
                                 </div>
@@ -111,12 +115,13 @@
                 </div>
             </footer>
             {% endblock footer %}
-        </div>
+        </main>
+
 
         {% block scripts %}
-        <script src="{{ url_for('static', filename='js/vendor/jquery-3.3.1.min.js') }}"></script>
-        <script src="{{ url_for('static', filename='js/popper.min.js') }}"></script>
-        <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
         <script src="{{ url_for('static', filename='js/plugins.js') }}"></script>
         <script src="{{ url_for('static', filename='js/ajax-mail.js') }}"></script>
         <script src="{{ url_for('static', filename='js/main.js') }}"></script>
