--- a/recordit/templates/auth/login.html
+++ b/recordit/templates/auth/login.html
@@ -3,6 +3,7 @@
 
 {% block title %}Login{% endblock %}
 
+
 {% block breadcrumb %}
 <div class="breadcrumb-area" data-bgimage="{{ url_for('static', filename='images/bg/breadcrumb-bg-01.jpg') }}"
     data-black-overlay="4">
@@ -13,7 +14,7 @@
                     <h3>Login</h3>
                     <ul class="breadcrumb-list">
                         <li class="breadcrumb-item">
-                            <a href="/">Home</a>
+                            <a href="{{ url_for('front.index') }}">Home</a>
                         </li>
                         <li class="breadcrumb-item active">
                             Login
@@ -34,22 +35,24 @@
             <div class="row">
                 <div class="col-lg-7 col-md-12 ml-auto mr-auto">
                     <div class="login-register-wrapper">
-                        <!-- login-register-tab-list end -->
                         <div class="tab-content">
+                            <h3 class="text-center">Login</h3>
                             <div class="login-form-container">
                                 <div class="login-register-form">
                                     <form action="#" method="post">
+                                        {{ form.csrf_token() }}
                                         <div class="login-input-box">
-                                            <input type="text" name="user-name" placeholder="User Name" />
-                                            <input type="password" name="user-password" placeholder="Password" />
+                                            {{ form.username() }}
+                                            {{ form.password() }}
                                         </div>
                                         <div class="button-box">
                                             <div class="login-toggle-btn">
-                                                <label><input type="checkbox" /> Remember me</label>
+                                                {{ form.remember_me() }}
+                                                {{ form.remember_me.label }}
                                             </div>
                                             <div class="button-box">
                                                 <button class="login-btn btn" type="submit">
-                                                    <span>Login</span>
+                                                    <span>{{ _('Login') }}</span>
                                                 </button>
                                             </div>
                                         </div>
