:heavy_minus_sign: :fire: remove image

--- a/recordit/templates/front/about.html
+++ b/recordit/templates/front/about.html
@@ -39,7 +39,7 @@
                 </div>
                 <div class="col-lg-5 ">
                     <div class="about-us-image text-right">
-                        <img src="{{ url_for('static', filename='images/about/about-01.jpg') }}" alt="">
+                        <img src="{{ url_for('static', filename='images/about.jpg') }}" alt="">
                     </div>
                 </div>
             </div>
