--- a/recordit/templates/base.html
+++ b/recordit/templates/base.html
@@ -56,7 +56,7 @@
                         <div class="row">
                             <div class="col-lg-3 col-md-5 col-6">
                                 <div class="logo-area">
-                                    <a href="/">
+                                    <a href="{{ url_for('front.index') }}">
                                         <img src="{{ url_for('static', filename='logo.png') }}" alt="Record it">
                                     </a>
                                 </div>
@@ -67,7 +67,7 @@
                                     <div class="main-menu">
                                         <nav class="main-navigation">
                                             <ul>
-                                                <li><a href="/">HOME</a></li>
+                                                <li><a href="{{ url_for('front.index') }}">HOME</a></li>
                                                 <li><a href="{{ url_for('front.about') }}">ABOUT</a></li>
                                                 <li><a href="{{ url_for('auth.login') }}">LOGIN</a></li>
                                                 <li class="active">
